--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,10 +23,9 @@
             "type": "python",
             "request": "launch",
             "console": "externalTerminal",
-            "program": "",
+            "program": "-m",
             "cwd": "${workspaceFolder}/docs",
             "args": [
-                "-m",
                 "http.server",
                 "8080"
             ]
