--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 .vscode
 node_modules
-RKI_COVID19.csv
-WHO-COVID-19-global-data.csv
-OWID-COVID-19-testing-all-observations.csv
+*.csv
 symptom-onset-to-death.png
